# lcm

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  biome.jsonc  catalog-info.yaml  docker-compose.yaml  generate-typescript.sh  mkdocs.yml  radixconfig.yaml  runbook.md
.github/workflows/: codeql-analysis.yml  main.yaml  master.yaml  on-pull-request.yaml  on-push-master-branch.yaml  on-push-prod.yaml  on-push.yaml  tests.yaml
IaC/: main.bicep
api/: Dockerfile  app.py  config.py  docker-entrypoint.sh  main_az_func.py  pyproject.toml
api/calculators/: Blend.py  Bridge.py  Optimizer.py  bridge.py  fraction_interpolator.py  optimizer.py
api/classes/: product.py  user.py
api/controllers/: combination.py  optimal_bridge.py  optimizer.py  products.py  report.py
api/controllers/products/: __init__.py  get.py
api/doc/: endpoints.md
api/openapi/: api.yaml
api/plots/: bridge.py  evolution.py  products_pie.py
api/src/: app.py  config.py
api/src/calculators/: bridge.py  fraction_interpolator.py  optimizer.py
api/src/classes/: product.py  user.py
api/src/controllers/: bridge_from_combination.py  combination.py  optimal_bridge.py  optimizer.py  products.py  report.py
api/src/plots/: bridge.py  products_pie.py
api/src/test_data/: metadata.csv
api/src/tests/: create_product_row_test.py  optimizer_test.py  test_calculate_performance.py  test_interpolator.py  test_report.py  utils.py
api/src/use_cases/: bridge_from_combination.py  calculate_optimal_bridge.py  get_products.py  optimal_bridge.py  optimizer.py  products.py  report.py  run_optimizer.py  synchronize_with_sharepoint.py
api/src/util/: authentication.py  azure_blobs.py  azure_table.py  enums.py  exception_handling.py  exceptions.py  logging.py  sync_share_point_az.py  utils.py
api/test_data/: flow-carb10.xlsx  metadata.csv
api/test_data/Supplier1/PSD/: Product2.xlsx
api/test_data/Supplier2/PSD/: Product3.xlsx
api/test_data/Supplier3/PSD/: Product4.xlsx
api/tests/: create_product_row_test.py  optimizer_test.py  product_list_and_file_match_test.py  test_calculate_performance.py  test_interpolator.py  test_product_list_and_file_match.py  test_report.py
api/tests/util/: test_excel.py  test_excel_files.py
api/util/: Authentication.py  Classes.py  DatabaseOperations.py  IDTransformation.py  authentication.py  azure_blobs.py  azure_table.py  enums.py  excel.py  excel_files.py  load_data.py  load_test_data.py  report.css  sync_share_point_az.py  utils.py
doc/: optimizer.md
docs/: index.md
docs/developers/guide/: index.md  running.md  setup.md  testing.md  upgrading.md
docs/operators/runbook/: architecture.md  authentication.md  configuration.md  deployment.md  index.md  operations.md  security.md
logic_app/: TransferFunctionManual.json
nginx/: Dockerfile  config.nginx  default.nginx  nginx.conf
oauth2/: Dockerfile  oauth2-proxy.toml  oauth2-proxy.yaml
redis/: .dockerignore  Dockerfile
web/: .prettierignore  .prettierrc.js  .snyk  Dockerfile  biome.jsonc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: auth.html  index.html  manifest.json
web/src/: Api.js  Api.ts  App.js  App.jsx  App.tsx  Common.ts  Common.tsx  Context.ts  CssConstants.js  Enums.ts  Hooks.tsx  Icons.ts  Types.ts  Utils.ts  applicationInsight.ts  index.css  index.js  main.tsx  tsconfig.json
web/src/Auth/: Auth.ts  AuthProvider.tsx
web/src/Components/: CombinationsWrapper.tsx  ContactButton.tsx  Main.tsx  MainBody.tsx  RefreshButton.tsx  SelectProducts.tsx  icons.js
web/src/Components/Blending/: CardContainer.js  CardContainer.tsx  CombinationCard.js  CombinationCard.tsx  CombinationTable.js  CombinationTable.tsx  ProductCard.js  ProductTable.js  ProductTable.tsx
web/src/Components/Bridging/: BridgeContainer.js  BridgeContainer.jsx  BridgeContainer.tsx  BridgeGraph.js  BridgeGraph.jsx  BridgeGraph.tsx  CumulativeGraph.tsx  DistributionGraph.tsx  InputContainer.tsx  ParticleSizeDistributionGraph.tsx  ValueBox.js  styles.ts  utils.ts
web/src/Components/Combinations/: CardContainer.tsx  CombinationCard.tsx  CombinationTable.tsx  CombinationsWrapper.tsx  ProductTable.tsx
web/src/Components/Common/: EditProducts.tsx  ErrorBoundary.tsx  SelectProducts.tsx  Toast.tsx  Tooltip.tsx
web/src/Components/Navbar/: ContactButton.tsx  CreateProduct.tsx  Navbar.tsx  RefreshButton.tsx  ResetAppData.tsx  styles.ts
web/src/Components/Optimization/: ExportButton.js  FilterEnvironmental.js  OptimizationContainer.js  OptimizationContainer.tsx  OptimizationResult.tsx  OptimizationRunner.tsx  PillInput.js  PillInput.tsx  SelectProducts.js  SelectProducts.tsx  SolutionBarChart.js  SolutionBarChart.tsx  SolutionData.js  SolutionData.tsx  SolutionRadarChart.js  SolutionRadarChart.tsx  SolutionVisualisations.js  SolutionVisualisations.tsx  WeightOptions.js  WeightOptions.tsx  WeigthChart.js
web/src/Components/Solution/: PerformanceRadar.tsx  SolutionBarChart.tsx  SolutionData.tsx  SolutionVisualisations.tsx
web/src/Pages/: Home.tsx  HomePage.js  Main.old.tsx.ignore  Main.tsx  NavigationTabs.js  RefreshButton.js  RefreshButton.tsx  history.js
web/src/gen-api/: README.md  package.json
web/src/gen-api/.openapi-generator/: FILES
web/src/gen-api/src/: runtime.ts
web/src/lib/: applicationInsights.ts  types.ts
web/src/lib/constants/: ceramicDiscSizes.ts  colors.ts
web/src/lib/contexts/: particle-size.tsx  user.tsx
web/src/lib/enums/: BridgingOption.ts
web/src/lib/hooks/: useApi.ts  useLocalStorage.ts
web/src/lib/utils/: findDValue.ts  findGraphData.ts  sortProducts.ts
(+10 files in other folders)
