[tool.poetry]
name = "lcm"
version = "0.1.0"
description = "Lost Circulation Material"
authors = ["Stig Ofstad <stoo@equinor.com>", "Eirik Ola Aksnes <eaks@equinor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
azure-cosmosdb-table = "^1.0.6"
numpy = "^1.26.2"
xlrd = "^2.0.1"
azure-storage-blob = "^12.19.0"
PyJWT = "^2.8.0"
cachetools = "^5.3.2"
vcrpy = "^5.1.0"
matplotlib = "^3.8.2"
gunicorn = "^21.2.0"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
bandit = "^1.6.2"
black = "^22.3.0"
coverage = "^5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
bandit = "^1.7.5"
ruff = "^0.1.6"

[tool.ruff]

src = ["src"]
target-version = "py310"
line-length = 120  # This is the prefered line-length. ruff will _try_ to make this

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "S",  # Bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # automatically upgrade syntax for newer versions of the language
    "RUF", # ruff specific rules
]

ignore = [
    "W191", # conflict with ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "E501",  # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
    "C901",  # Code complexity
    "RUF012", # Pydantic class variables
    "S101",  # Use of "assert"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
