[project]
name = "lcm"
version = "0.1.0"
description = "Lost Circulation Material"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cosmosdb-table (>=1.0.6,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "contourpy (>=1.3.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "azure-storage-blob (>=12.24.1,<13.0.0)",
    "opentelemetry-api (>=1.30.0,<2.0.0)",
    "opentelemetry-sdk (>=1.30.0,<2.0.0)",
    "opentelemetry-instrumentation-flask (>=0.51b0,<0.52)",
    "azure-monitor-opentelemetry (>=1.6.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
bandit = "^1.8.3"
ruff = "^0.9.7"
black = "^25.1.0"
coverage = "^7.6.12"

[tool.ruff]

src = ["src"]
target-version = "py310"
line-length = 120  # This is the prefered line-length. ruff will _try_ to make this

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "S",  # Bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # automatically upgrade syntax for newer versions of the language
    "RUF", # ruff specific rules
]

ignore = [
    "W191", # conflict with ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "E501",  # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
    "C901",  # Code complexity
    "RUF012", # Pydantic class variables
    "S101",  # Use of "assert"
]