[project]
name = "lcm"
version = "0.1.0"
description = "Lost Circulation Material"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cosmosdb-table~=1.0.6",
    "numpy~=2.4.2",
    "kiwisolver~=1.4.9",
    "contourpy~=1.3.3",
    "pillow~=12.1.1",
    "cffi~=2.0.0",
    "openpyxl~=3.1.5",
    "pandas~=3.0.1",
    "flask~=3.1.3",
    "gunicorn~=25.1.0",
    "matplotlib~=3.10.8",
    "cachetools~=7.0.1",
    "pyjwt~=2.11.0",
    "azure-storage-blob~=12.28.0",
    "opentelemetry-api~=1.39",
    "opentelemetry-sdk~=1.39",
    "opentelemetry-instrumentation-flask~=0.60b0",
    "azure-monitor-opentelemetry~=1.8.6"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
bandit = "^1.8.3"
ruff = "^0.9.7"
black = "^25.1.0"
coverage = "^7.6.12"

[tool.ruff]

src = ["src"]
target-version = "py310"
line-length = 120  # This is the prefered line-length. ruff will _try_ to make this

lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "S",  # Bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # automatically upgrade syntax for newer versions of the language
    "RUF", # ruff specific rules
]

lint.ignore = [
    "W191", # conflict with ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "E501",  # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
    "C901",  # Code complexity
    "RUF012", # Pydantic class variables
    "S101",  # Use of "assert"
]